/*
 * MIT License
 *
 * Copyright (c) 2024 KH
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

package keyhub.gitkit.core.local;

import keyhub.gitkit.core.value.CommitFileDiff;
import org.eclipse.jgit.api.CheckoutCommand;
import org.eclipse.jgit.api.ResetCommand;
import org.eclipse.jgit.diff.DiffEntry;
import org.eclipse.jgit.lib.ObjectId;
import org.eclipse.jgit.revwalk.RevCommit;

import java.util.List;
import java.util.Optional;

public interface LocalGit {
	static LocalGit init() {
		return SimpleLocalGit.init();
	}
	Optional<RevCommit> findCommitByHash(String hash);
	List<DiffEntry> findDiffs(RevCommit oldCommit, RevCommit newCommit);
	List<DiffEntry> findDiffMappers(RevCommit oldCommit, RevCommit newCommit);
	List<CommitFileDiff> findDiffFiles(RevCommit oldCommit, RevCommit newCommit);
	List<CommitFileDiff> findDiffMapperFiles(RevCommit oldCommit, RevCommit newCommit);
	String readFileContents(ObjectId id);
	int stageAll();
	int stageAll(String path);
	String commit(String commitMessage);
	String reset(ResetCommand.ResetType mode);
	String resetHard();
	boolean isConflicted();
	int resolveConflicts(CheckoutCommand.Stage side);
	int resolveConflictsWithLocals();
	int resolveConflictsWithOrigins();
}
